--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "main": "powerbox.js",
   "dependencies": {
     "express": "^4.15.3",
+    "moment": "^2.18.1",
     "node-cron": "^1.1.3",
     "pi-gpio": "0.0.8",
     "sqlite3": "^3.1.8"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "tap-spec": "^4.1.1",
+    "tape": "^4.6.3"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tape test/unit/**/*.spec.js | tap-spec",
+    "acceptance": "tape test/acceptance/**/*.spec.js | tap-spec"
   },
   "repository": {
     "type": "git",
